# mealie-mcp-server

./: .env.template  .gitignore  LICENSE  README.md  main.py  openapi.json  pyproject.toml  pytest.ini
docker/: mealie.docker-compose.yml
src/: errors.py  mealie_client.py  param_builder.py  prompts.py  server.py  utils.py
src/mealie/: __init__.py  client.py  food.py  group.py  mealie_client.py  mealplan.py  recipe.py  shopping_list.py  user.py
src/models/: mealplan.py  recipe.py
src/tools/: __init__.py  food_tools.py  group_tools.py  mealplan_tools.py  recipe_tools.py  shopping_list_tools.py  user_tools.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_mealie_container.py  test_recipe_update.py  test_server.py
tests/unit/: __init__.py  test_recipe_api_url_import.py  test_recipe_update.py  test_recipe_url_import.py  test_recipe_url_import_edge_cases.py  test_tools.py  test_utils.py
